fixed buy and save button alignment

--- a/css/product-overview.css
+++ b/css/product-overview.css
@@ -178,24 +178,20 @@
 }
 
 .buy-save-bar {
-    display: flex;
+    /* display: flex; */
     margin-top: 50px;
     /* color: rgb(51, 51, 51); */
     background: rgb(244, 244, 244);
-}
-
-.buy-save-bar .container-fluid {
-    padding: 2rem 0;
 }
 
 .buy-save-bar .btn-primary {
     background: #080D20;
     color: #fff;
     font-size: 1.7em;
-    /* font-weight: bold; */
-    padding: 5px 5rem;
-    width: 40%;
-    margin-left: 20px;
+    padding: 5px 6rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
     border: none;
     border-radius: 3px;
     box-shadow: none;
@@ -205,10 +201,17 @@
     background: #080D20;
     color: #fff;
     font-size: 1.7em;
-    /* font-weight: bold; */
-    padding: 5px 5rem;
-    margin-left: 10px;
+    padding: 5px 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-right: 2rem;
     border: none;
     border-radius: 3px;
     box-shadow: none;
+}
+
+@media only screen and (max-width: 980px) {
+    .buy-save-bar .btn-primary {
+        margin-left: 1rem;
+    }
 }
